--- a/CSS/main.css
+++ b/CSS/main.css
@@ -62,6 +62,9 @@
   width: 100%;
   display: flex;
 }
+.main-container {
+  position: relative;
+}
 .users {
   height: 100%;
   width: 3.1875rem;
@@ -163,8 +166,7 @@
   transition: all 1000ms ease-in-out !important;
 }
 .account {
-  margin-top: 1.25rem;
-  margin-left: 1.4375rem;
+  height: 10%;
 }
 .img-01 img {
   width: 3.25rem;
@@ -176,8 +178,7 @@
   width: 2.0313rem;
 }
 .info {
-  margin-top: 0.8125rem;
-  margin-left: 1.4375rem;
+  height: 10%;
 }
 .name {
   font-size: 13px;
@@ -203,9 +204,14 @@
 .fllowing {
   margin-right: 0.3125rem;
 }
-.functions {
-  margin-left: 1.4375rem;
+.function-container {
+  height: 70%;
   border-bottom: 1px solid #d5d5d5;
+  position: relative;
+}
+.functions {
+  position: absolute;
+  left: 7%;
 }
 .function img {
   height: 1.8438rem;
@@ -213,17 +219,18 @@
 .function {
   display: flex;
   align-items: center;
-  margin-top: 12%;
+  margin-top: 25%;
 }
 .function span {
   margin-left: 1.1563rem;
 }
 .tools {
   width: 100%;
-  height: 20%;
+  height: 10%;
   z-index: 9999999;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 80%;
   margin: 0px auto;
 }
@@ -235,12 +242,17 @@
 .translate {
   transform: translate(-300px) !important;
 }
-@media only screen and (max-width: 400px) {
-  .function {
-    margin-top: 6% !important;
+@media only screen and (max-height: 860px) {
+  .function-container {
+    height: 65%;
   }
-  .functions {
-    height: 26.5625rem !important;
+}
+@media only screen and (max-height: 700px) {
+  .function-container {
+    height: 45%;
+  }
+  .function {
+    margin-top: 15%;
   }
 }
 #main-frame {
@@ -362,4 +374,41 @@ input {
 }
 .hidden {
   display: none !important;
+}
+.info {
+  position: relative;
+}
+.info .name {
+  position: absolute;
+  left: 5%;
+  top: 30%;
+}
+.info .id {
+  position: absolute;
+  left: 35%;
+  top: 34%;
+}
+.info .fllower {
+  position: relative;
+  left: 5%;
+  top: 60%;
+  display: flex;
+}
+.account {
+  position: relative;
+}
+.img-01 img {
+  position: absolute;
+  left: 5%;
+  top: 35%;
+}
+.third img {
+  position: absolute;
+  right: 10%;
+  top: 35%;
+}
+.second img {
+  position: absolute;
+  right: 25%;
+  top: 35%;
 }
